# RAGforyl

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  start.bat  start.sh
.github/workflows/: ci.yml
docs/: ARTIFACTS.md  CONFIGURATION.md  PIPELINE.md
examples/sources/: flight_basics.md
ragforyl/: __init__.py  __main__.py  answering.py  chunking.py  cli.py  config.py  exporter.py  extraction.py  graph.py  io.py  llm.py  models.py  pipeline.py  retrieval.py  server.py
ragforyl/web/: app.js  index.html  styles.css
scripts/: check_secrets.py  clean_install_check.py  smoke_test.py
tests/: conftest.py  test_chunking.py  test_extraction.py  test_pipeline.py  test_server.py
