[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragforyl"
version = "0.1.0"
description = "Evidence-grounded, end-to-end knowledge graph RAG toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "RAGforyl contributors"}]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-dotenv>=1.0,<2",
  "python-multipart>=0.0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]
ocr = [
  "PyMuPDF>=1.24,<2",
  "rapidocr-onnxruntime>=1.2,<2",
]

[project.scripts]
ragforyl = "ragforyl.cli:main"

[tool.setuptools.packages.find]
include = ["ragforyl*"]

[tool.setuptools.package-data]
ragforyl = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
